--- a/index.html
+++ b/index.html
@@ -16,18 +16,38 @@
             Home &nbsp&nbsp About &nbsp&nbsp Contact Us
         </div>
         <div class="welcome-banner">
-            <p class="heading">Keep Reading</p>
-            <p class="sub-heading"><i>Reading is best for get new ideas.</i></p>
+            <p class="heading"><b>Keep Reading...</b></p>
+            <p class="sub-heading"><i><b>Reading is best for get new ideas.</b></i></p>
             <button class="see-more-button">See More</button>
-            <div class="welcome-banner-right">
-                right
-            </div>
+            <p class="serch-text"><i>Explore your intrest-</i></p><input type="search" id="bookSearch" placeholder="Search...">
+            <div class="welcome-banner-right"></div>
         </div>
     </header>
-    <div class=main-body>
-        <div class="book-categories">
-            book-categories
+    <div class="book-categories">
+        <p class="book-categories-head">Categories</p>
+        <div class="csebooks">
+            <p class="csebookhead">C.S.E books</p>
+            <div class="cse1">1</div>
+            <div class="cse2">2</div>
+            <div class="cse3">3</div>
+            <div class="cse4">4</div>
+            <a href="#" class="cseseemore">see more:</a>
+        </div>
+        <div class="eebooks">
+            <p class="eebookhead">E.E books</p>
+            <div class="ee1">1</div>
+            <div class="ee2">2</div>
+            <div class="ee3">3</div>
+            <div class="ee4">4</div>
+            <a href="#" class="eeseemore">see more:</a>
         </div>
     </div>
+    <footer>
+        <div class="social-media">
+            <div class="githubID"><img src="images/icons/github.png" alt="github"></div>
+            <div class="linkedinID"><img src="images/icons/linkedin.png" alt="linkedin"></div>
+            <div class="instaID"><img src="images/icons/instagram.png" alt="instagram"></div>
+        </div>
+    </footer>
 </body>
 </html>
