--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <p class="book-categories-head">Categories</p>
         <div class="csebooks">
             <p class="csebookhead">C.S.E books</p>
-            <div class="cse1">1</div>
-            <div class="cse2">2</div>
-            <div class="cse3">3</div>
-            <div class="cse4">4</div>
+            <div class="cse1"><a href="#"><img src="images/bookCovers/ModernJavaInAction.png" alt="java"></a></div>
+            <div class="cse2"><a href="#"><img src="images/bookCovers/discreteMathematics.jpg" alt="discreteMathematics"></a></div>
+            <div class="cse3"><a href="#"><img src="images/bookCovers/COA.jpg" alt="C.O.A"></a></div>
+            <div class="cse4"><a href="#"><img src="" alt="#"></a></div>
             <a href="#" class="cseseemore">see more:</a>
         </div>
         <div class="eebooks">
